Fixed Links to JS and CSS

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8"/>
 		<title>Ed Sheeran - Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-		<script type='text/javascript' src='../js/jquery.js'></script>
-		<script type='text/javascript' src='../js/fadeeffects.js'></script>
-		<script type='text/javascript' src='../js/facebook-widget.js'></script>
-		<script type='text/javascript' src='../js/twitter-widget.js'></script>
+		<link rel="stylesheet" href="css/style.css">
+		<script type='text/javascript' src='js/jquery.js'></script>
+		<script type='text/javascript' src='js/fadeeffects.js'></script>
+		<script type='text/javascript' src='js/facebook-widget.js'></script>
+		<script type='text/javascript' src='js/twitter-widget.js'></script>
 	</head>
 
 	<body>
