--- a/charity.html
+++ b/charity.html
@@ -5,10 +5,10 @@
 		<title>Ed Sheeran - Charity</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script type='text/javascript' src='../js/jquery.js'></script>
-		<script type='text/javascript' src='../js/fadeeffects.js'></script>
-		<script type='text/javascript' src='../js/facebook-widget.js'></script>
-		<script type="text/javascript" src='../js/jquery-slider.js'></script>
+		<script type='text/javascript' src='js/jquery.js'></script>
+		<script type='text/javascript' src='js/fadeeffects.js'></script>
+		<script type='text/javascript' src='js/facebook-widget.js'></script>
+		<script type="text/javascript" src='js/jquery-slider.js'></script>
 	</head>
 
 	<body>
