--- a/tickets.html
+++ b/tickets.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8" />
 		<title>Ed Sheeran - Tickets</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-		<script type='text/javascript' src='../js/jquery.js'></script>
-		<script type='text/javascript' src='../js/fadeeffects.js'></script>
-		<script type='text/javascript' src='../js/facebook-widget.js'></script>
+		<link rel="stylesheet" href="css/style.css">
+		<script type='text/javascript' src='js/jquery.js'></script>
+		<script type='text/javascript' src='js/fadeeffects.js'></script>
+		<script type='text/javascript' src='js/facebook-widget.js'></script>
 		<script type="text/javascript" src='http://www.bandsintown.com/javascripts/bit_widget.js'></script>
 	</head>
 
