Fixed Image Links

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 					<a href="music.html">Music</a>
 				</nav>	
 				<div id="banner">
-					<img src="../images/logo.png" alt="Ed Sheeran Logo">
+					<img src="images/logo.png" alt="Ed Sheeran Logo">
 				</div>
 			</header>
 			<main>
