--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 					<a href="music.html" class="currentlink">Music</a>
 				</nav>	
 				<div id="banner">
-					<img src="../images/logo.png" alt="Ed Sheeran Logo">
+					<img src="images/logo.png" alt="Ed Sheeran Logo">
 				</div>
 			</header>
 			<main>
@@ -30,15 +30,15 @@
 					<h1>EPs and Live Sessions</h1>
 					<!-- Albums -->
 					<div id="albums">
-						<div id="album1"><a href="https://itunes.apple.com/gb/album/you-need-me-ep/id484876441" target="_blank"><img src="../images/album1.png" title="You Need Me EP" alt="You Need Me Album Art"></a></div>
-						<div id="album2"><a href="https://itunes.apple.com/gb/album/loose-change/id484682114" target="_blank"><img src="../images/album2.png" title="Loose Change" alt="Loose Change Album Art"></a></div>
-						<div id="album3"><a href="https://itunes.apple.com/gb/album/songs-i-wrote-with-amy-ep/id484606634" target="_blank"><img src="../images/album3.png" title="Songs I Wrote With Amy EP" alt="Songs I Wrote With Amy Album Art"></a></div>
-						<div id="album4"><a href="https://itunes.apple.com/gb/album/live-at-the-bedford/id484887417" target="_blank"><img src="../images/album4.png" title="Live At The Bedford" alt="Live At The Bedford Album Art"></a></div>
-						<div id="album5"><a href="https://itunes.apple.com/gb/album/no.-5-collaborations-project/id483578747" target="_blank"><img src="../images/album5.png" title="No.5 Collaborations Project" alt="No.5 Collaborations Project Album Art"></a></div>
-						<div id="album6"><a href="https://itunes.apple.com/gb/album/itunes-festival-london-2011/id450020843" target="_blank"><img src="../images/album6.png" title="iTunes Festival London 2011 Live Session" alt="iTunes Festival London 2011 Album Art"></a></div>
-						<div id="album7"><a href="https://itunes.apple.com/gb/album/lego-house-ep/id474197789" target="_blank"><img src="../images/album7.png" title="Lego House EP" alt="Lego House Album Art"></a></div>
-						<div id="album8"><a href="https://itunes.apple.com/gb/album/itunes-festival-london-2012/id561426381" target="_blank"><img src="../images/album8.png" title="iTunes Festival London 2012 Live Session" alt="iTunes Festival London 2012 Album Art"></a></div>
-						<div id="album9"><a href="https://itunes.apple.com/gb/album/drunk-remixes-ep/id500124978" target="_blank"><img src="../images/album9.png" title="Drunk Remixes EP" alt="Drunk Remixes Album Art"></a></div>
+						<div id="album1"><a href="https://itunes.apple.com/gb/album/you-need-me-ep/id484876441" target="_blank"><img src="images/album1.png" title="You Need Me EP" alt="You Need Me Album Art"></a></div>
+						<div id="album2"><a href="https://itunes.apple.com/gb/album/loose-change/id484682114" target="_blank"><img src="images/album2.png" title="Loose Change" alt="Loose Change Album Art"></a></div>
+						<div id="album3"><a href="https://itunes.apple.com/gb/album/songs-i-wrote-with-amy-ep/id484606634" target="_blank"><img src="images/album3.png" title="Songs I Wrote With Amy EP" alt="Songs I Wrote With Amy Album Art"></a></div>
+						<div id="album4"><a href="https://itunes.apple.com/gb/album/live-at-the-bedford/id484887417" target="_blank"><img src="images/album4.png" title="Live At The Bedford" alt="Live At The Bedford Album Art"></a></div>
+						<div id="album5"><a href="https://itunes.apple.com/gb/album/no.-5-collaborations-project/id483578747" target="_blank"><img src="images/album5.png" title="No.5 Collaborations Project" alt="No.5 Collaborations Project Album Art"></a></div>
+						<div id="album6"><a href="https://itunes.apple.com/gb/album/itunes-festival-london-2011/id450020843" target="_blank"><img src="images/album6.png" title="iTunes Festival London 2011 Live Session" alt="iTunes Festival London 2011 Album Art"></a></div>
+						<div id="album7"><a href="https://itunes.apple.com/gb/album/lego-house-ep/id474197789" target="_blank"><img src="images/album7.png" title="Lego House EP" alt="Lego House Album Art"></a></div>
+						<div id="album8"><a href="https://itunes.apple.com/gb/album/itunes-festival-london-2012/id561426381" target="_blank"><img src="images/album8.png" title="iTunes Festival London 2012 Live Session" alt="iTunes Festival London 2012 Album Art"></a></div>
+						<div id="album9"><a href="https://itunes.apple.com/gb/album/drunk-remixes-ep/id500124978" target="_blank"><img src="images/album9.png" title="Drunk Remixes EP" alt="Drunk Remixes Album Art"></a></div>
 					</div>
 					<!-- Albums End -->
 				</article>
