Fixed Apple Store Link

--- a/music.html
+++ b/music.html
@@ -54,7 +54,7 @@
 				<!-- Spotify Player End -->
 				<!-- iTunes -->
 				<div id="itunes">
-					<a href="https://itunes.apple.com/gb/artist/ed-sheeran/id183313439?uo=4" target="blank"><img src="../images/itunes.png"></a>
+					<a href="https://itunes.apple.com/gb/artist/ed-sheeran/id183313439?uo=4" target="blank"><img src="images/itunes.png"></a>
 				</div>
 				<!-- iTunes End -->
 				<!--Floating Facebook Widget -->
