Fixed Slideshow Image Links

--- a/charity.html
+++ b/charity.html
@@ -31,17 +31,17 @@
 					<h1>Charities That Ed Supports</h1>
 					<div id="slideshow">
 						<div id="slideshowWindow">
-							<div class="slide"><a href="http://www.careforcasualties.org.uk/" target="_blank"><img src="../images/careforcasualities-logo.png" alt="Care For Casualties The Rifle' Charity Logo"/></a></div>
+							<div class="slide"><a href="http://www.careforcasualties.org.uk/" target="_blank"><img src="images/careforcasualities-logo.png" alt="Care For Casualties The Rifle' Charity Logo"/></a></div>
 
-							<div class="slide"><a href="http://www.soldierscharity.org/" target="_blank"><img src="../images/abf-logo.png" alt="ABF The Soldier's Charity Logo"/></a></div>
+							<div class="slide"><a href="http://www.soldierscharity.org/" target="_blank"><img src="images/abf-logo.png" alt="ABF The Soldier's Charity Logo"/></a></div>
 
-							<div class="slide"><a href="http://www.bluebellwood.org/" target="_blank"><img src="../images/bluebell-wood-logo.png" alt="Bluebell Wood Children's Hospice Logo"/></a></div>
+							<div class="slide"><a href="http://www.bluebellwood.org/" target="_blank"><img src="images/bluebell-wood-logo.png" alt="Bluebell Wood Children's Hospice Logo"/></a></div>
 
-							<div class="slide"><a href="http://www.crisis.org.uk/" target="_blank"><img src="../images/crisis-logo.png" alt="Crisis Homeless Charity Logo"/></a></div>
+							<div class="slide"><a href="http://www.crisis.org.uk/" target="_blank"><img src="images/crisis-logo.png" alt="Crisis Homeless Charity Logo"/></a></div>
 
-							<div class="slide"><a href="http://www.each.org.uk/" target="_blank"><img src="../images/each-logo.png"alt="Each - East Aglia's Children's Hospices Logo"/></a></div>
+							<div class="slide"><a href="http://www.each.org.uk/" target="_blank"><img src="images/each-logo.png"alt="Each - East Aglia's Children's Hospices Logo"/></a></div>
 
-							<div class="slide"><a href="http://www.youthmusictheatreuk.org/" target="_blank"><img src="../images/ymtuk-logo.png" alt="YMT UK - Youth Music Theatre UK Logo"/></a></div>
+							<div class="slide"><a href="http://www.youthmusictheatreuk.org/" target="_blank"><img src="images/ymtuk-logo.png" alt="YMT UK - Youth Music Theatre UK Logo"/></a></div>
 						</div>
 					</div>
 				</article>
